re PR middle-end/40386 (wrong code generation for several SPEC CPU2000 benchmarks (lucas, mgrid, face, applu, apsi) with -O1 -fno-ira-share-spill-slots)

2010-09-08  Vladimir Makarov  <vmakarov@redhat.com>

	PR middle-end/40386
	* ira.c (pseudo_for_reload_consideration_p): Don't use
	flag_ira_share_spill_slots.

2010-09-08  Vladimir Makarov  <vmakarov@redhat.com>

	PR middle-end/40386
	* gcc.c-torture/execute/{pr40386.c,pr40386.x}: New testcase.

From-SVN: r164095