gcc/testsuite/gcc.c-torture/execute/pr40386.x
@@ -1,0 +1,4 @@
+set additional_flags "-fno-ira-share-spill-slots"
+return 0
+set additional_flags "-fno-ira-share-spill-slots"
+return 0
